samples/_failures_safe/1761394448_52c42f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7b9676a.c: In function ‘main’:
./samples/SAFE/__tmp_c7b9676a.c:158:5: error: expected expression at end of input
  158 |     for (int i = 0; i < entry_count; i++)
      |     ^~~
./samples/SAFE/__tmp_c7b9676a.c:158:5: error: expected declaration or statement at end of input
